[gd_scene load_steps=7 format=3 uid="uid://dn26abd3dut75"]

[ext_resource type="Theme" uid="uid://dygx7jsqh014s" path="res://GUI/gui_assets/TestTheme.tres" id="2_cibbs"]
[ext_resource type="FontFile" uid="uid://oog83hb78u21" path="res://GUI/gui_assets/ProtestStrike-Regular.ttf" id="3_5e85r"]
[ext_resource type="Script" path="res://GUI/gui_scripts/Video.gd" id="4_ep2f0"]
[ext_resource type="Script" path="res://GUI/gui_scripts/Audio.gd" id="5_vqdwe"]
[ext_resource type="PackedScene" uid="uid://igeecmajjydk" path="res://GUI/gui_scenes/input_settings.tscn" id="6_pwiei"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_diuc3"]

[node name="OptionsMenu" type="CanvasLayer"]
process_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 400.0
offset_top = 78.0
offset_right = -400.0
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="OPTIONS" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_cibbs")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 22
text = "      OPTIONS
"

[node name="SettingsContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_cibbs")
theme_override_styles/panel = SubResource("StyleBoxEmpty_diuc3")

[node name="SettingsTab" type="TabContainer" parent="MarginContainer/SettingsContainer"]
layout_mode = 2
theme = ExtResource("2_cibbs")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/drop_mark_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_5e85r")
theme_override_font_sizes/font_size = 16
tab_alignment = 1
current_tab = 2

[node name="Video" type="TabBar" parent="MarginContainer/SettingsContainer/SettingsTab"]
visible = false
layout_mode = 2
script = ExtResource("4_ep2f0")

[node name="Video_OptionsContainer" type="HBoxContainer" parent="MarginContainer/SettingsContainer/SettingsTab/Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -43.5
offset_right = 101.0
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(101, 44)

[node name="Video_LabelContainer" type="VBoxContainer" parent="MarginContainer/SettingsContainer/SettingsTab/Video/Video_OptionsContainer"]
layout_mode = 2

[node name="Full_Screen" type="Label" parent="MarginContainer/SettingsContainer/SettingsTab/Video/Video_OptionsContainer/Video_LabelContainer"]
layout_mode = 2
text = "Full Screen"

[node name="Borderless" type="Label" parent="MarginContainer/SettingsContainer/SettingsTab/Video/Video_OptionsContainer/Video_LabelContainer"]
layout_mode = 2
text = "Borderless"

[node name="Vsync" type="Label" parent="MarginContainer/SettingsContainer/SettingsTab/Video/Video_OptionsContainer/Video_LabelContainer"]
layout_mode = 2
text = "VSync :"

[node name="Video_BoxContainer" type="VBoxContainer" parent="MarginContainer/SettingsContainer/SettingsTab/Video/Video_OptionsContainer"]
layout_mode = 2

[node name="Fullscreen_Box" type="CheckBox" parent="MarginContainer/SettingsContainer/SettingsTab/Video/Video_OptionsContainer/Video_BoxContainer"]
layout_mode = 2

[node name="Borderless_Box" type="CheckBox" parent="MarginContainer/SettingsContainer/SettingsTab/Video/Video_OptionsContainer/Video_BoxContainer"]
layout_mode = 2

[node name="VSync_Option" type="OptionButton" parent="MarginContainer/SettingsContainer/SettingsTab/Video/Video_OptionsContainer/Video_BoxContainer"]
layout_mode = 2
item_count = 4
selected = 1
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptive"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[node name="Audio" type="TabBar" parent="MarginContainer/SettingsContainer/SettingsTab"]
visible = false
layout_mode = 2
script = ExtResource("5_vqdwe")

[node name="Audio_OptionsContainer" type="HBoxContainer" parent="MarginContainer/SettingsContainer/SettingsTab/Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -65.5
offset_right = 54.5
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2

[node name="Audio_LabelContainer" type="VBoxContainer" parent="MarginContainer/SettingsContainer/SettingsTab/Audio/Audio_OptionsContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="MarginContainer/SettingsContainer/SettingsTab/Audio/Audio_OptionsContainer/Audio_LabelContainer"]
layout_mode = 2
text = "Master"

[node name="Music" type="Label" parent="MarginContainer/SettingsContainer/SettingsTab/Audio/Audio_OptionsContainer/Audio_LabelContainer"]
layout_mode = 2
text = "Music"

[node name="Dialogue" type="Label" parent="MarginContainer/SettingsContainer/SettingsTab/Audio/Audio_OptionsContainer/Audio_LabelContainer"]
layout_mode = 2
text = "Dialogue"

[node name="Sound Effects" type="Label" parent="MarginContainer/SettingsContainer/SettingsTab/Audio/Audio_OptionsContainer/Audio_LabelContainer"]
layout_mode = 2
text = "Sound Effects
"

[node name="Skill Effects" type="Label" parent="MarginContainer/SettingsContainer/SettingsTab/Audio/Audio_OptionsContainer/Audio_LabelContainer"]
layout_mode = 2
text = "Skill Effects
"

[node name="Audio_BoxContainer" type="VBoxContainer" parent="MarginContainer/SettingsContainer/SettingsTab/Audio/Audio_OptionsContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="Master" type="HSlider" parent="MarginContainer/SettingsContainer/SettingsTab/Audio/Audio_OptionsContainer/Audio_BoxContainer"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05

[node name="Music" type="HSlider" parent="MarginContainer/SettingsContainer/SettingsTab/Audio/Audio_OptionsContainer/Audio_BoxContainer"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05

[node name="Dialogue" type="HSlider" parent="MarginContainer/SettingsContainer/SettingsTab/Audio/Audio_OptionsContainer/Audio_BoxContainer"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05

[node name="Sound Effects" type="HSlider" parent="MarginContainer/SettingsContainer/SettingsTab/Audio/Audio_OptionsContainer/Audio_BoxContainer"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05

[node name="Skill Effects" type="HSlider" parent="MarginContainer/SettingsContainer/SettingsTab/Audio/Audio_OptionsContainer/Audio_BoxContainer"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05

[node name="Controls" type="TabBar" parent="MarginContainer/SettingsContainer/SettingsTab"]
layout_mode = 2

[node name="InputSettings" parent="MarginContainer/SettingsContainer/SettingsTab/Controls" instance=ExtResource("6_pwiei")]
layout_mode = 1

[connection signal="toggled" from="MarginContainer/SettingsContainer/SettingsTab/Video/Video_OptionsContainer/Video_BoxContainer/Fullscreen_Box" to="MarginContainer/SettingsContainer/SettingsTab/Video" method="_on_fullscreen_box_toggled"]
[connection signal="toggled" from="MarginContainer/SettingsContainer/SettingsTab/Video/Video_OptionsContainer/Video_BoxContainer/Borderless_Box" to="MarginContainer/SettingsContainer/SettingsTab/Video" method="_on_borderless_box_toggled"]
[connection signal="item_selected" from="MarginContainer/SettingsContainer/SettingsTab/Video/Video_OptionsContainer/Video_BoxContainer/VSync_Option" to="MarginContainer/SettingsContainer/SettingsTab/Video" method="_on_v_sync_option_item_selected"]
[connection signal="value_changed" from="MarginContainer/SettingsContainer/SettingsTab/Audio/Audio_OptionsContainer/Audio_BoxContainer/Master" to="MarginContainer/SettingsContainer/SettingsTab/Audio" method="_on_master_value_changed"]
[connection signal="value_changed" from="MarginContainer/SettingsContainer/SettingsTab/Audio/Audio_OptionsContainer/Audio_BoxContainer/Music" to="MarginContainer/SettingsContainer/SettingsTab/Audio" method="_on_music_value_changed"]
[connection signal="value_changed" from="MarginContainer/SettingsContainer/SettingsTab/Audio/Audio_OptionsContainer/Audio_BoxContainer/Dialogue" to="MarginContainer/SettingsContainer/SettingsTab/Audio" method="_on_dialogue_value_changed"]
[connection signal="value_changed" from="MarginContainer/SettingsContainer/SettingsTab/Audio/Audio_OptionsContainer/Audio_BoxContainer/Sound Effects" to="MarginContainer/SettingsContainer/SettingsTab/Audio" method="_on_sound_effects_value_changed"]
[connection signal="value_changed" from="MarginContainer/SettingsContainer/SettingsTab/Audio/Audio_OptionsContainer/Audio_BoxContainer/Skill Effects" to="MarginContainer/SettingsContainer/SettingsTab/Audio" method="_on_skill_effects_value_changed"]
